demo-web-static/sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-static
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: demo-web-static
  type: LoadBalancer
