demo-web-static/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web-static
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: # ส่วนของการกำหนด Rule ให้กับ Ingress
  - host: "localhost" # Hostname ที่จะให้ User เข้าใช้งาน
    http:
      paths:
      - path: /demo-web # Path ที่จะให้เข้ามาใช้งาน Pod
        pathType: Prefix # ประเภทของการ Match Path
        backend: # ส่วนของการระบุ Service ที่จะให้นำทางไปยัง Pod
          service:
            name: demo-web-static # ชื่อของ Service
            port:
              number: 80 #  Port ของ Service
